Revert toList()